# social-media-api

./: .env  .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: github-actions-demo.yml  test.yml
app/: calculations.py  config.py  crud.py  database.py  database_tests.py  main.py  models.py  oauth2.py  schemas.py  security_tests.py  tests.py  utils.py
app/api/: deps.py  main.py
app/api/routers/: login.py  posts.py  users.py  votes.py
app/api/routes/: login.py  posts.py  users.py  votes.py
app/core/: config.py  db.py  security.py
app/routers/: auth.py  post.py  user.py  vote.py
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  test_posts.py  test_users.py  test_votes.py
tests/api/routes/: test_login.py  test_posts.py  test_users.py  test_votes.py
tests/crud/: test_user.py
tests/utils/: auth.py  utils.py
