[project]
name = "social-media-api"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi-cli>=0.0.5",
    "fastapi[standard]>=0.115.0",
    "psycopg2>=2.9.9",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.5.2",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.11",
    "sqlmodel>=0.0.22",
    "typing-extensions>=4.12.2",
]
authors = [
    {name = "Santiago Papiernik", email = "spapiernik12@gmail.com"},
]
license = { file = "LICENSE" }

[tool.uv]
dev-dependencies = [
    "faker>=30.1.0",
    "mypy>=1.11.2",
    "pytest>=8.3.3"
]

[tool.pdm]
version = { source = "file", path = "app/__init__.py" }
distribution = false
