[project]
name = "social-media-api"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi-cli>=0.0.5",
    "fastapi[standard]>=0.115.2",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.5.2",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
    "python-multipart>0.0.18",
    "sqlmodel>=0.0.22",
    "typing-extensions>=4.12.2",
]
authors = [
    {name = "Santiago Papiernik", email = "spapiernik12@gmail.com"},
]
license = { file = "LICENSE" }

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "faker>=30.1.0",
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.pdm]
version = { source = "file", path = "app/__init__.py" }
distribution = false
